fix goal area and broken layout

--- a/app/assets/stylesheets/sass/modules/aside.sass
+++ b/app/assets/stylesheets/sass/modules/aside.sass
@@ -151,7 +151,7 @@
   margin: 28px 0 62px 7px
 
 .month
-  margin: 15px 0 0 9px
+  margin: 15px 400px 0 9px
 
 .month-title
   float: left
@@ -164,7 +164,7 @@
 .main
   background-color: #766e5f
   margin-top: 33px
-  height: 850px
+  min-height: 900px
 
 .category
   background-color: #877e6d
